# the-team-principal

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/workflows/: build.yml
include/: application.hpp  input.hpp  logger.hpp  window.hpp
src/: application.cpp  input.cpp  logger.cpp  window.cpp
